--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>My first webpage</title>
+    <title>My first webpage wow</title>
     <style>
       body {margin: 20%; font-family: sans-serif; font-size: 1.5em;}
       h1 {letter-spacing: 0.05em;}
